--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,13 @@
 layout: archive
 ---
 
-Welcome to Marco Costanzo's site :D 
+<article>
+    <h1>Under Construction</h1>
+    <div>
+        <p>Sorry site under construction!</p>
+        <p>&mdash; Marco Costanzo</p>
+    </div>
+</article>
 
 
 {{ content }}
