placeholder and navigation tips

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,12 @@
 layout: archive
 ---
 
-<article>
+<div class="notice--warning">
     <h1>Under Construction</h1>
     <div>
         <p>Sorry site under construction!</p>
         <p>&mdash; Marco Costanzo</p>
     </div>
-</article>
-
+</div>
 
 {{ content }}
