add bio and courses

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,12 +2,10 @@
 layout: archive
 ---
 
-<div class="notice--warning">
-    <h1>Under Construction</h1>
-    <div>
-        <p>Sorry site under construction!</p>
-        <p>&mdash; Marco Costanzo</p>
-    </div>
-</div>
+<b>Marco Costanzo</b> obtained the <i>Bachelor's Degree</i> cum laude in Computer and Electronic Engineering, the <i>Master's Degree</i> cum laude in Computer Engineering (curriculum Robotics and Automation), and the <i>Ph.D.</i> in Industrial and Computer Engineering at Università degli Studi della Campania "Luigi Vanvitelli", in November 2015, July 2017, and January 2021, respectively.
+Between May ad August 2019 he was <i>Visiting Research Student</i>, at the Institute for Artificial Intelligence (IAI) at University of Bremen (UniHB), Bremen, Germany. In September 2020 he won the prize IEEE RAS Italian Chapter "Fabrizio Flacco" Young Author Best Paper Award 2020.
+From December 2020 to December 2021 he was <i>Research Fellow</i> at Università degli Studi della Campania "Luigi Vanvitelli", where he currently holds a researcher position.
+His main research interests concern in-hand robotic manipulation using tactile sensors, visual control, and safe human-robot interaction.
+He is currently <i>Associate Editor</i> of IEEE Robotics and Automation Letters.
 
 {{ content }}
