--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,3 +9,20 @@ His main research interests concern in-hand robotic manipulation using tactile s
 He is currently <i>Associate Editor</i> of IEEE Robotics and Automation Letters.
 
 {{ content }}
+
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+
+{% if paginator %}
+  {% assign posts = paginator.posts %}
+{% else %}
+  {% assign posts = site.posts %}
+{% endif %}
+
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+<div class="entries-{{ entries_layout }}">
+  {% for post in posts %}
+    {% include archive-single.html type=entries_layout %}
+  {% endfor %}
+</div>
+
+{% include paginator.html %}
